[project]
name = "traivler-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.11.4",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.135.2",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "openai>=2.29.0",
    "uvicorn>=0.42.0",
]
